--- a/src/app/@Dialog/@Employee/add-employee/add-employee.html
+++ b/src/app/@Dialog/@Employee/add-employee/add-employee.html
@@ -19,16 +19,6 @@
       <input matInput placeholder="請輸入姓名" [(ngModel)]="addEmployeeList.name" name="name">
     </mat-form-field>
 
-    <!-- 任職狀態 -->
-    <mat-form-field appearance="outline" class="form-field">
-      <mat-label>任職狀態</mat-label>
-      <mat-select [(ngModel)]="addEmployeeList.employmentStatus" name="state">
-        <mat-option value="在職中">在職中</mat-option>
-        <mat-option value="已離職">已離職</mat-option>
-        
-      </mat-select>
-    </mat-form-field>
-
     <mat-form-field appearance="outline" class="form-field">
       <mat-label>部門</mat-label>
       <mat-select [(ngModel)]="addEmployeeList.department" name="department">
@@ -40,15 +30,8 @@
     <mat-form-field appearance="outline" class="form-field">
       <mat-label>職位</mat-label>
       <mat-select [(ngModel)]="addEmployeeList.title" name="state">
-        <mat-option value="執行長"> 執行長</mat-option>
-        <mat-option value="總經理"> 總經理</mat-option>
-        <mat-option value="技術總監">技術總監</mat-option>
-        <mat-option value="策畫經理"> 策畫經理</mat-option>
-        <mat-option value="美術監督"> 美術監督</mat-option>
-        <mat-option value="設備經理"> 設備經理</mat-option>
-        <mat-option value="程式設計師"> 程式設計師</mat-option>
-        <mat-option value="正職員工"> 正職員工</mat-option>
-        <mat-option value="兼職員工"> 兼職員工</mat-option>
+        <mat-option value="主管">主管</mat-option>
+        <mat-option value="正職員工">正職員工</mat-option>
       </mat-select>
     </mat-form-field>
 
@@ -75,6 +58,6 @@
 </mat-dialog-content>
 
 <mat-dialog-actions align="end">
-  <button mat-stroked-button class="custom-button cancel-btn" (click)="onCancel()">取消</button>
   <button mat-flat-button color="primary" class="custom-button add-btn" (click)="addEmployee()">新增</button>
+  <button mat-stroked-button class="custom-button cancel-btn" (click)="onCancel()">取消</button>
 </mat-dialog-actions>
