--- a/src/app/@Dialog/@Shift/accept-shift/accept-shift.component.html
+++ b/src/app/@Dialog/@Shift/accept-shift/accept-shift.component.html
@@ -1,3 +1,19 @@
-<label>是否同意</label>
-<button (click)="accept()">同意</button>
-<button (click)="disagree()">不同意</button>
+
+<div class="toolbar">
+  <div class="toolbar-left">
+    <!-- 可預留空間放其他功能 -->
+  </div>
+
+  <div class="toolbar-center">
+    <mat-icon class="nav-icon" (click)="previousMonth()">chevron_left</mat-icon>
+    <span class="month-label">{{ currentMonthLabel }}</span>
+    <mat-icon class="nav-icon" (click)="nextMonth()">chevron_right</mat-icon>
+  </div>
+
+  <div class="toolbar-right">
+    <button mat-raised-button color="primary" (click)="goBack()">返回</button>
+  </div>
+</div>
+
+
+<daypilot-scheduler [config]="config" [events]="events"></daypilot-scheduler>
