--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,4 +1,7 @@
   // base
+  /* login.component.scss */
+.dots { display: none !important; }
+
   $page-bg: #14299e;
   $card-bg: rgba(255, 255, 255, 0.06);
   $btn-bg: #34699a;
