--- a/src/app/@BackStage/index/index.html
+++ b/src/app/@BackStage/index/index.html
@@ -1,38 +1,23 @@
 <div class="layout-container">
 
-  <!-- Header -->
-  <!-- <div class="header">
-    <div class="BackStageLogo"></div>
-
-    <div class="header-item">
-      <mat-icon>chat</mat-icon>
-      <label>訊息</label>
-    </div>
-
-    <div class="header-item">
-      <mat-icon>storefront</mat-icon>
-      <label>{{ storeName }}</label>
-    </div>
-
-    <div class="header-item">
-      <mat-icon>construction</mat-icon>
-      <label>店鋪設定</label>
-    </div>
-
-    <div class="header-item">
-      <mat-icon>logout</mat-icon>
-    </div>
-  </div> -->
-
   <!-- Main 區塊（Sidebar + Content） -->
   <div class="main-container">
 
     <!-- Sidebar -->
-    <div class="sidebar">
-      <div class="sidebar-item">
-        <mat-icon>home</mat-icon><br />
-        <label>首頁</label>
-      </div>
+    <div class="sidebar" [ngClass]="{'sidebarOpen': openSide}"
+                        (mouseenter)="onMouseEnter()"
+                        (mouseleave)="onMouseLeave()">
+
+
+    <!-- 中間箭頭 -->
+    <div class="sidebar-toggle" (click)="toggleSidebar()">
+      <mat-icon [ngClass]="{'rotated': openSide}">chevron_right</mat-icon>
+    </div>
+
+    <div class="sidebar-item" (click)="toggleIcon('')">
+      <mat-icon>home</mat-icon><br />
+      <label>首頁</label>
+    </div>
 
     <div class="sidebar-item" (click)="toggleIcon('opinion')">
       <mat-icon>speaker_notes</mat-icon><br />
@@ -47,6 +32,11 @@
     <div class="sidebar-item" (click)="toggleIcon('clock')">
       <mat-icon>schedule</mat-icon><br />
       <label>打卡紀錄</label>
+    </div>
+
+    <div class="sidebar-item" (click)="toggleIcon('salary')">
+      <mat-icon>payments</mat-icon><br />
+      <label>薪資管理</label>
     </div>
 
     <div class="sidebar-item" (click)="toggleIcon('leave')">
@@ -91,6 +81,9 @@
         <app-back-clock></app-back-clock>
       }
 
+      @if(isBackSalary){
+        <app-salary></app-salary>
+      }
     </div>
   </div>
 </div>
