--- a/src/app/@BackStage/shift/shift.html
+++ b/src/app/@BackStage/shift/shift.html
@@ -1,27 +1,22 @@
-<div class="toolbar">
-  <div class="toolbar-left">
-    <!-- <button mat-raised-button color="primary" (click)="showShiftTimeWork()">新增時段</button> -->
-    <button mat-raised-button color="primary" (click)="showShiftWork()">新增排班</button>
-    <!-- <button mat-raised-button color="accent" (click)="showPreShiftWork()">開放預排班</button> -->
+@if(preShiftCheck){
+  <app-accept-shift (back)="showAcceptShift()"></app-accept-shift>
+}@else {
+  <div class="toolbar">
+    <div class="toolbar-left">
+      <button mat-raised-button color="primary" (click)="AutoShift()">自動排班</button>
+    </div>
+
+    <div class="toolbar-center">
+      <mat-icon class="nav-icon" (click)="previousMonth()">chevron_left</mat-icon>
+      <span class="month-label">{{ currentMonthLabel }}</span>
+      <mat-icon class="nav-icon" (click)="nextMonth()">chevron_right</mat-icon>
+    </div>
+
+    <div class="toolbar-right">
+      <button mat-raised-button color="primary" (click)="showAcceptShift()" style="margin-right: 7px;">確認預排班</button>
+      <button mat-raised-button color="primary" (click)="showShiftWork()">新增排班</button>
+    </div>
   </div>
 
-  <div class="toolbar-right">
-    <button mat-raised-button color="primary"
-            [color]="currentView === 'day' ? 'primary' : undefined"
-            (click)="switchView('day')">
-      天
-    </button>
-    <button mat-raised-button color="primary"
-            [color]="currentView === 'week' ? 'primary' : undefined"
-            (click)="switchView('week')">
-      週
-    </button>
-    <button mat-raised-button color="primary"
-            [color]="currentView === 'month' ? 'primary' : undefined"
-            (click)="switchView('month')">
-      月
-    </button>
-  </div>
-</div>
-
-<daypilot-scheduler [config]="config" [events]="events"></daypilot-scheduler>
+  <daypilot-scheduler [config]="config" [events]="events"></daypilot-scheduler>
+}
